Add statistic: average cost per ETH

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 							<td>Holdings</td>
 							<td id="stat-held"></td>
 							<td>ETH</th>
+						</tr>						
+						<tr>
+							<td>Average Cost Per ETH</td>
+							<td id="stat-avg-cost"></td>
+							<td>USD</td>
 						</tr>
 						<tr>
 							<td>Cost</td>
