Add Raphael and morris.js libraries

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 		
 		<link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/morris.css">
 		
 		<script src="js/jquery-3.2.1.min.js"></script>
 		<script src="js/jquery.csv.js"></script>
+		<script src="js/raphael-min.js"></script>
+		<script src="js/morris.min.js"></script>
+		
 		<script src="js/config.js"></script>
 		<script src="js/main.js"></script>
 	</head>
