Implement unrealized profit/loss over time chart

--- a/index.html
+++ b/index.html
@@ -74,6 +74,23 @@
 					</tbody>
 				</table>
 			</div>
+			
+			<div class="row">
+				<table class="table table-striped table-hover table-bordered">
+					<thead>
+						<tr>
+							<th>Unrealized Profit / Loss Over Time</th>
+						</tr>
+					</thead>
+					<tbody id="chart-body">
+						<tr>
+							<td>
+								<div id="chart-pl"></div>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 		
 			<div class="row">
 				<table class="table table-striped table-hover table-bordered" id="data-table">
