Display current worth and profit/loss for individual purchase transactions, CSS tweaks, update README.md

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8">		
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
 		<title>ETH Portfolio</title>
 		
 		<link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
@@ -99,11 +101,12 @@
 							<th>Date</th>
 							<th>Amount (ETH)</th>
 							<th>Cost Per ETH (USD)</th>
-							<th>Total Cost (USD)</th>
+							<th>Cost (USD)</th>
+							<th>Worth (USD)</th>
+							<th>Unrealized P/L (USD, %)</th>
 						</tr>
 					</thead>
-					<tbody id="data-body">
-						
+					<tbody id="data-body">						
 					</tbody>
 				</table>
 			</div>
