Add spinning loading animation while chart loads

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
 					<tbody id="chart-body">
 						<tr>
 							<td>
+								<div id="loading-spinner">
+									<img src="img/loading.svg">
+								</div>
 								<div id="chart-pl"></div>
 							</td>
 						</tr>
